--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,16 +22,13 @@ jobs:
       run: npm i ts-node -D
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-      # Runs on display
+      # Runs on display while headless=false
     - name: Install Xvfb 
       run: |
         sudo apt-get update
         sudo apt-get install -y xvfb
     - name: Run Tests
-      run: npm run test
-    - name: Run Failed 
-      run: |
-        npm run test:failed
+      run: xvfb-run -a npm run test
     - uses: actions/upload-artifact@v4
       if: always()
       with:
