--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -33,5 +33,5 @@ jobs:
       if: always()
       with:
         name: Report
-        path: test-results
+        path: playwright-report
         retention-days: 2
