--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "npx playwright test",
-    "test:ui": "npx playwright test --ui",
-    "allure": "npx allure generate ./allure-results --clean && npx allure open"
+    "test": "cross-env npx playwright test",
+    "test:ui": "cross-env npx playwright test --ui",
+    "allure": "cross-env npx allure generate ./allure-results --clean && npx allure open"
   },
   "author": "eyupUK",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "fs-extra": "^11.2.0",
     "ts-node": "^10.9.2",
+    "cross-env": "^7.0.3",
     "winston": "^3.17.0"
   }
 }
