--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs-extra": "^11.2.0",
     "ts-node": "^10.9.2",
     "cross-env": "^7.0.3",
+    "axios": "^1.8.4",
     "winston": "^3.17.0"
   }
 }
