--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "cross-env npx playwright test",
     "test:ui": "cross-env npx playwright test --ui",
     "allure": "cross-env npx allure generate ./allure-results --clean && npx allure open",
-    "clean": "ts-node ./helpers/cleanTestResults.ts"
+    "clean": "node ./helpers/cleanTestResults.js"
   },
   "author": "eyupUK",
   "license": "ISC",
@@ -14,13 +14,13 @@
   "devDependencies": {
     "@faker-js/faker": "^9.4.0",
     "@playwright/test": "^1.52.0",
-    "@types/node": "^22.15.11",
     "allure-playwright": "^3.2.0",
     "dotenv": "^16.4.7",
     "fs-extra": "^11.2.0",
-    "ts-node": "^10.9.2",
     "cross-env": "^7.0.3",
+    "@types/node": "^20.8.9",
     "axios": "^1.8.4",
+    "playwright": "^1.39.0",
     "winston": "^3.17.0"
   }
 }
