feat: Implement login and logout functionality in PlaywrightWrapper and add negative login tests

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 WORKERS = 3
 HEADLESS = false
 BASE_URL = https://news.ycombinator.com
+USER_NAME = applejuicedrinker@protonmail.com
+PASSWORD = Aa,1326395265
+BASEURL = https://sheets.lido.app
