--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,8 +18,8 @@ jobs:
         node-version: 22
     - name: Install dependencies
       run: npm ci
-    - name: Install ts-node
-      run: npm i ts-node -D
+    # - name: Install ts-node
+    #   run: npm i ts-node -D
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
       # Runs on display while headless=false
