--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ on:
     # Runs every day at 22.00 am
     #- cron: '0 22 * * *'
   push:
-    branches: [ main, master ]
+    # branches: [ main, master ]
   #pull_request:
     #branches: [ main, master ]
 jobs:
